--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ header .container img {
     display: none;
 }
 
-header .container h1 {
+header .container h1, .about-ne .container h1 {
     color: var(--green);
 }
 
@@ -81,6 +81,7 @@ nav {
     padding: 0 100px;
     position: sticky;
     top: 0;
+    z-index: 99;
 }
 
 nav img {
@@ -102,6 +103,27 @@ nav ul a {
 nav ul a svg {
     display: none;
 }
+.about-ne {
+    display: flex;
+    padding: 100px;
+}
+
+.about-ne .container {
+    width: 50%;
+    padding-right: 50px;
+    text-align: center;
+}
+
+.about-ne .img-container {
+    width: 50%;
+    text-align: center;
+}
+
+.about-ne .img-container img {
+    width: 60%;
+    border: 3px solid var(--purple);
+    padding: 0.5rem;
+}
 
 @media (max-width: 1000px) {
     header .container {
@@ -115,6 +137,18 @@ nav ul a svg {
 
     nav {
         padding: 0 30px;
+    }
+
+    .about-ne {
+        flex-direction: column;
+    }
+
+    .about-ne .container, .about-ne .img-container {
+        width: 100%;
+    }
+
+    .about-ne .container {
+        padding-right: 0;
     }
 }
 /*Responsividade para tablet*/
@@ -158,5 +192,9 @@ nav ul a svg {
     nav ul a svg {
         display: block;
         margin: 0 auto 10px;
+    }
+
+    .about-ne {
+        padding: 40px;
     }
 }
