--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
     --bg-dark: #212226;
     --light-grey: #E8DEDE;
     --menu-height: 75px;
+    --medium-grey: #2F3034;
 }
 
 * {
@@ -15,6 +16,10 @@
 html, body {
     margin: 0;
     background: var(--bg-dark);
+}
+
+html {
+    scroll-behavior: smooth;
 }
 
 body, button, input, select, textarea {
@@ -36,8 +41,8 @@ h1, h2 {
 }
 
 p {
-     color:root var(--light-grey);
- }
+    color: root var(--light-grey);
+}
 
 button {
     background: var(--purple);
@@ -46,6 +51,23 @@ button {
     padding: 8px 35px;
     font-weight: bold;
     font-size: 18px;
+    cursor: pointer;
+}
+
+.secondary-button {
+    background: var(--medium-grey);
+    border: 1px solid var(--purple);
+    color: var(--green);
+    font-weight: bold;
+    height: 80px;
+
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+.secondary-button img {
+    margin-right: 15px;
 }
 
 header {
@@ -106,6 +128,7 @@ nav ul a svg {
 .about-ne {
     display: flex;
     padding: 100px;
+    align-items: center;
 }
 
 .about-ne .container {
@@ -124,6 +147,189 @@ nav ul a svg {
     border: 3px solid var(--purple);
     padding: 0.5rem;
 }
+
+.services {
+    text-align: center;
+    margin: 150px 0;
+    padding: 0 100px;
+}
+
+.services-conteiner  {
+    display: flex;
+    justify-content: space-between;
+    max-width: 1200px;
+    margin: 60px auto 0;
+}
+
+.portfolio-conteiner {
+    display: flex;
+    max-width: 1200px;
+    margin: 60px auto 0;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.services .services-conteiner .service-card {
+    max-width: 360px;
+    background: #2F3034;
+    border: 1px solid var(--purple);
+    border-radius: 16px;
+    padding: 40px 25px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    text-align: center;
+    align-items: center;
+}
+
+.services .services-conteiner .service-card img {
+    margin-bottom: 40px; 
+    width: 90px;
+}
+
+
+
+.service-card + .service-card {
+    margin-left: 10px;
+}
+
+.portfolio {
+    padding: 0 100px;
+    text-align: center;
+    background: url('assets/bg.png');
+    margin-bottom: 100px;
+    height: 100%;
+}
+
+.portfolio-card {
+    background: radial-gradient(100% 100% at 0% 0%, rgba(255, 255, 255, 0.33) 0%, rgba(255, 255, 255, 0) 100%);
+    backdrop-filter: blur(42px);
+    box-shadow: 0px 4px 24px -1px rgba(68, 33, 33, 0.1) ;
+    border-radius: 16px;
+    border: 0.1px solid #fff;
+    max-width: 500px;
+    text-align: left;
+    padding: 50px 25px;
+    margin-bottom: 15px;
+    
+}
+
+.portfolio-card button {
+    margin-top: 20px;
+    background: none;
+    border: 1px solid var(--green);
+    border-radius: 16px;
+    padding: 3px 15px;
+    text-decoration: none;
+}
+
+.portfolio-card p {
+    margin-bottom: 10px;
+}
+
+.portfolio-card button a:hover {
+    color: var(--light-grey);
+}
+
+.portfolio-card button a {
+    color: var(--green);
+    text-decoration: none;
+}
+
+.services .services-conteiner .service-card:hover {
+    background: var(--green);
+    color: #2F3034;
+}
+
+.portfolio-card .img-container {
+    margin: 0 25px 50px;
+}
+
+.img-container img {
+    width: 100%;
+}
+
+.languagem-containe {
+    margin-bottom: 20px;
+}
+
+.languagem-containe ul {
+    display: flex;
+    list-style: none;
+    padding: 0;
+}
+
+.languagem-containe ul li {
+    color: var(--green);
+    border: 1px solid var(--green);
+    border-radius: 16px;
+    padding: 3px 15px;
+}
+
+p {
+    margin: 0;
+}
+
+.languagem-containe ul li + li {
+    margin-left: 10px;
+}
+
+.curriculum {
+    padding: 0 100px;
+    text-align: center;
+}
+
+.curriculum .container {
+    display: flex;
+    margin: 50px auto;
+    max-width: 1200px;
+}
+
+.container .content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: left;
+    width: 100%;
+    align-items: center;
+}
+
+.content .curriculum-info {
+    display: grid;
+    grid-template-columns: 150px auto;
+    grid-gap: 1rem;
+    margin-bottom: 50px;
+}
+
+.contact {
+    max-width: 800px;
+    margin: 150px auto 70px;
+    text-align: center;
+    padding: 0 20px;
+}
+
+.contact h1 {
+    margin: 0 auto 40px;
+    color: #15CDCB;
+}
+
+.contact button {
+    margin: 40px auto;
+}
+
+.contact .social-media {
+    max-width: 360px;
+    margin: 50px auto 0;
+    display: flex;
+    justify-content: space-around;
+}
+
+footer {
+    text-align: center;
+    margin-bottom: 40px;
+}
+
 
 @media (max-width: 1000px) {
     header .container {
@@ -149,6 +355,45 @@ nav ul a svg {
 
     .about-ne .container {
         padding-right: 0;
+    }
+
+    .services, .portfolio {
+        padding: 0;
+    }
+
+    .services .services-conteiner {
+        flex-wrap: wrap;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .service-card {
+        height: 394px;
+    }
+
+    .service-card + .service-card {
+        margin-left: 0;
+        margin-top: 20px;
+    }
+
+    .portfolio {
+        height: 100%;
+    }
+
+    .portfolio-conteiner {
+        display: block;
+        margin: 0 150px;
+    }
+
+    .curriculum .container {
+        flex-wrap: wrap;
+    }
+
+    .curriculum-img {
+        display: block;
+        margin: 0 auto 50px;
+        width: 100%;
+        max-width: 520px;
     }
 }
 /*Responsividade para tablet*/
@@ -196,5 +441,21 @@ nav ul a svg {
 
     .about-ne {
         padding: 40px;
+    }
+
+    .services, .portfolio {
+        margin: 70px 0;
+    }
+
+    .services .services-conteiner, .portfolio-conteiner {
+        padding: 0 20px;
+    }
+
+    .curriculum {
+        padding: 0 20px;
+    }
+
+    .curriculum-info {
+        padding: 0 15px;
     }
 }
