--- a/style.css
+++ b/style.css
@@ -434,7 +434,7 @@ footer {
 /*Responsividade para tablet*/
 @media (max-width: 767px) {
     
-    header .container img {
+    header .container h1 {
         display: inline;
         margin-bottom: 70px;
     }
